<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="48dp"
        android:paddingBottom="24dp">

        <!-- akhirnya, tombol back ke halaman login dan judulnya -->
        <!-- akhirnya sesuai dengan yang ada di figma -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_back_green"
                android:contentDescription="Kembali"
                android:layout_marginEnd="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_title"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                android:fontFamily="@font/plus_jakarta_sans_bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/login_subtitle"
            android:textColor="@color/gray_text"
            android:textSize="14sp"
            android:fontFamily="@font/plus_jakarta_sans_regular" />

        <!--field pengisian nama pengguna-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/label_name"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/plus_jakarta_sans_semibold" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_input_field"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_hint"
            android:fontFamily="@font/plus_jakarta_sans_regular"
            android:lines="1" />

        <!-- field untuk pengisian email pengguna-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_email"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/plus_jakarta_sans_semibold" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_input_field"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_hint"
            android:fontFamily="@font/plus_jakarta_sans_regular"
            android:lines="1" />

        <!-- field untuk password-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_password"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/plus_jakarta_sans_semibold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_input_field"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="52dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_hint"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                android:lines="1" />

            <ImageView
                android:id="@+id/iv_toggle_password"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_eye_off"
                android:contentDescription="@string/toggle_password" />

        </RelativeLayout>

        <!-- konfirmasi password-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_confirm_password"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/plus_jakarta_sans_semibold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_input_field"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="52dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_hint"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                android:lines="1" />

            <ImageView
                android:id="@+id/iv_toggle_confirm_password"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_eye_off"
                android:contentDescription="@string/toggle_password" />
        </RelativeLayout>

        <!-- tombol besar "DAFTAR" -->
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_button_green"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:letterSpacing="0.08"
            android:textStyle="bold"
            android:fontFamily="@font/plus_jakarta_sans_bold" />

        <!-- divider "atau masuk dengan" -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/gray_divider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/or_login_with"
                android:textColor="@color/gray_text"
                android:textSize="13sp"
                android:fontFamily="@font/plus_jakarta_sans_regular" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/gray_divider" />

        </LinearLayout>

        <!-- tombol google dan apple-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_google"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:src="@drawable/ic_google"
                android:contentDescription="Login dengan Google"
                android:padding="6dp" />
            <ImageView
                android:id="@+id/iv_apple"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:src="@drawable/ic_apple"
                android:contentDescription="Login dengan Apple"
                android:layout_marginStart="24dp"
                android:padding="6dp" />
        </LinearLayout>

        <!-- Tombol "sudah punya akun"-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account"
                android:textColor="@color/gray_text"
                android:textSize="14sp"
                android:fontFamily="@font/plus_jakarta_sans_regular" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/login_now"
                android:textColor="@color/green_primary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:fontFamily="@font/plus_jakarta_sans_bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>